--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,19 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Launch localhost",
-            "type": "firefox",
-            "request": "launch",
-            "reAttach": true,
-            "url": "http://localhost:3000/",
-            "webRoot": "${workspaceFolder}"
-        }
-    ]
+		{
+			"name": "Launch localhost",
+			"type": "firefox",
+			"request": "launch",
+			"reAttach": true,
+			"url": "http://localhost:3000/",
+			"webRoot": "${workspaceFolder}",
+			"pathMappings": [
+				{
+					"url": "http://localhost:3000/src/Enemy",
+					"path": "${workspaceFolder}/src/Enemy"
+				}
+			]
+		}
+	]
 }
