--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "block-game",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^2.7.2"
-  }
+	"name": "block-game",
+	"version": "0.0.1",
+	"description": "A basic web game build with vanilla JS",
+	"publisher": "codeWithShashank",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"host": "vite --host"
+	},
+	"repository": "https://github.com/Shashank-Salian/block-game/",
+	"devDependencies": {
+		"vite": "^2.7.2"
+	}
 }
